--- a/about/index.html
+++ b/about/index.html
@@ -483,7 +483,7 @@ facial expression recognition and animal facial landmark localization. For publi
     <div class="content">
         <p class="title">Cascaded Face Super-Resolution with Shape and Identity Priors.</p>
         <p class="authors">Dan Zeng, Zelin Li, Xiao Yan, Wen Jiang, Xinshao Wang, Jiang Li and Bo Tang.</p>
-        <p class="publisher">IET Image Processing 2023-06. <a href="" target="_blank" rel="external">[PDF]</a></p>
+        <p class="publisher">IET Image Processing 2023-06. <a href="/publications/2023IPR.pdf" target="_blank" rel="external">[PDF]</a></p>
     </div>
 </div>
 <div class="project publication_item">
