--- a/about/index.html
+++ b/about/index.html
@@ -748,7 +748,7 @@ Keynote speech chair for <a href="https://www.comp.hkbu.edu.hk/wsb2021/programme
 	      
 <div class="honor_table">
 Reviewer for major journals and conferences in the areas of Biometrics, computer vision and pattern recognition, 
-such as IEEE TIFS, IEEE TIP, IEEE TMI, PR, PR Letters, Artificial Intelligence, Electronics Letters, IVC, AAAI'21,AAAI'22, CVPR'22,CVPR'23, ICCV'23, ECCV'22, ACM MM'22, FG'22 etc.
+such as IEEE TPAMI, IEEE TIFS, IEEE TIP, IEEE TMI, PR, PR Letters, Artificial Intelligence, Electronics Letters, IVC, AAAI'21,AAAI'22, CVPR'22,CVPR'23, ICCV'23, ECCV'22, ACM MM'22, FG'22 etc.
 </div>
 
 
