--- a/about/index.html
+++ b/about/index.html
@@ -395,6 +395,12 @@ facial expression recognition, animal facial landmark localization, animal pose 
     <table>
         <tr class="table_item">
             <td class="table_date">2023 July</td>
+            <td class="table_desc">One paper has been accepted by ACM MM2023!</td>
+        </tr>
+    </table>
+    <table>
+        <tr class="table_item">
+            <td class="table_date">2023 July</td>
             <td class="table_desc">One paper has been accepted by ICCV2023! congrats to Shuiwang Li! :D </td>
         </tr>
     </table>
