--- a/about/index.html
+++ b/about/index.html
@@ -477,7 +477,23 @@ facial expression recognition, animal facial landmark localization, animal pose 
 <div class="project publication_item">
     <div class="teasure"></div>
     <div class="content">
-        <p class="title">Analyzing and Combating Attribute Bias for Face Restoration.</p>
+        <p class="title">Data-Scarce Animal Face Alignment via Bi-Directional Cross-Species Knowledge Transfer.</p>
+        <p class="authors">Dan Zeng, Shanchuan Hong, Shuiwang Li, Qiaomu Shen and Bo Tang.</p>
+        <p class="publisher">ACM MM 2023-10.(Ottawa, Canada)<a href="/publications/2023MM.pdf" target="_blank" rel="external">[PDF]</a></p>
+    </div>
+</div>
+<div class="project publication_item">
+    <div class="teasure"></div>
+    <div class="content">
+        <p class="title">Adaptive and Background-Aware Vision Transformer for Real-Time UAV Tracking.</p>
+        <p class="authors">Shuiwang Li, Xiangyang Yang, Dan Zeng(#), Xucheng Wang.</p>
+        <p class="publisher">ICCV 2023-10.(Paris, France)<a href="/publications/2023ICCV.pdf" target="_blank" rel="external">[PDF]</a></p>
+    </div>
+</div>
+<div class="project publication_item">
+    <div class="teasure"></div>
+    <div class="content">
+        <p class="title">Adaptive and Background-Aware Vision Transformer for Real-Time UAV Tracking.</p>
         <p class="authors">Zelin Li, Dan Zeng(#), Xiao Yan, Qiaomu Shen and Bo Tang.</p>
         <p class="publisher">IJCAI 2023-08 #Corresponding author.(Macao, China)<a href="/publications/2023IJCAI.pdf" target="_blank" rel="external">[PDF]</a></p>
     </div>
