--- a/about/index.html
+++ b/about/index.html
@@ -487,7 +487,7 @@ facial expression recognition, animal facial landmark localization, animal pose 
     <div class="content">
         <p class="title">Adaptive and Background-Aware Vision Transformer for Real-Time UAV Tracking.</p>
         <p class="authors">Shuiwang Li, Xiangyang Yang, Dan Zeng(#), Xucheng Wang.</p>
-        <p class="publisher">ICCV 2023-10.(Paris, France)<a href="/publications/2023ICCV.pdf" target="_blank" rel="external">[PDF]</a></p>
+        <p class="publisher">ICCV 2023-10 #Corresponding author.(Paris, France)<a href="/publications/2023ICCV.pdf" target="_blank" rel="external">[PDF]</a></p>
     </div>
 </div>
 <div class="project publication_item">
