--- a/about/index.html
+++ b/about/index.html
@@ -493,7 +493,7 @@ facial expression recognition, animal facial landmark localization, animal pose 
 <div class="project publication_item">
     <div class="teasure"></div>
     <div class="content">
-        <p class="title">Adaptive and Background-Aware Vision Transformer for Real-Time UAV Tracking.</p>
+        <p class="title">Analyzing and Combating Attribute Bias for Face Restoration.</p>
         <p class="authors">Zelin Li, Dan Zeng(#), Xiao Yan, Qiaomu Shen and Bo Tang.</p>
         <p class="publisher">IJCAI 2023-08 #Corresponding author.(Macao, China)<a href="/publications/2023IJCAI.pdf" target="_blank" rel="external">[PDF]</a></p>
     </div>
