--- a/about/index.html
+++ b/about/index.html
@@ -479,7 +479,12 @@ facial expression recognition, animal facial landmark localization, animal pose 
     <div class="content">
         <p class="title">Data-Scarce Animal Face Alignment via Bi-Directional Cross-Species Knowledge Transfer.</p>
         <p class="authors">Dan Zeng, Shanchuan Hong, Shuiwang Li, Qiaomu Shen and Bo Tang.</p>
-        <p class="publisher">ACM MM 2023-10.(Ottawa, Canada)<a href="/publications/2023MM.pdf" target="_blank" rel="external">[PDF]</a></p>
+        <p class="publisher">ACM MM 2023-10.(Ottawa, Canada)<a href="/publications/2023MM.pdf" target="_blank" rel="external">[Paper]</a>
+		
+		<a href="/publications/mmfp3950-slides.pdf" target="_blank" rel="external">[Slides]</a>
+		
+		<a href="/publications/mmfp3950-video.mp4" target="_blank" rel="external">[Video]</a>
+	</p>
     </div>
 </div>
 <div class="project publication_item">
@@ -495,7 +500,12 @@ facial expression recognition, animal facial landmark localization, animal pose 
     <div class="content">
         <p class="title">Analyzing and Combating Attribute Bias for Face Restoration.</p>
         <p class="authors">Zelin Li, Dan Zeng(#), Xiao Yan, Qiaomu Shen and Bo Tang.</p>
-        <p class="publisher">IJCAI 2023-08 #Corresponding author.(Macao, China)<a href="/publications/2023IJCAI.pdf" target="_blank" rel="external">[PDF]</a></p>
+        <p class="publisher">IJCAI 2023-08 #Corresponding author.(Macao, China)<a href="/publications/2023IJCAI.pdf" target="_blank" rel="external">[Paper]</a>
+			
+		<a href="/publications/mmfp3950-slides.pdf" target="_blank" rel="external">[Slides]</a>
+		
+		<a href="/publications/mmfp3950-video.mp4" target="_blank" rel="external">[Video]</a>
+	</p>
     </div>
 </div>
 <div class="project publication_item">
