--- a/about/index.html
+++ b/about/index.html
@@ -395,7 +395,7 @@ facial expression recognition, animal facial landmark localization, animal pose 
     <table>
         <tr class="table_item">
             <td class="table_date">2023 July</td>
-            <td class="table_desc">One paper has been accepted by ACM MM2023! </td>
+            <td class="table_desc">One paper has been accepted by ACM MM2023! congrats to Shanchuan Hong!</td>
         </tr>
     </table>
     <table>
@@ -483,7 +483,7 @@ facial expression recognition, animal facial landmark localization, animal pose 
 		
 		<a href="/publications/mmfp3950-slides.pdf" target="_blank" rel="external">[Slides]</a>
 		
-		<a href="/publications/mmfp3950-video.mp4" target="_blank" rel="external">[Video]</a>
+		<a href="https://drive.google.com/file/d/1gGK-yiD9ABIMy12NLiB7_7gFKZoUY6_5/view" target="_blank" rel="external">[Video]</a>
 	</p>
     </div>
 </div>
@@ -502,9 +502,9 @@ facial expression recognition, animal facial landmark localization, animal pose 
         <p class="authors">Zelin Li, Dan Zeng(#), Xiao Yan, Qiaomu Shen and Bo Tang.</p>
         <p class="publisher">IJCAI 2023-08 #Corresponding author.(Macao, China)<a href="/publications/2023IJCAI.pdf" target="_blank" rel="external">[Paper]</a>
 			
-		<a href="/publications/mmfp3950-slides.pdf" target="_blank" rel="external">[Slides]</a>
+		<a href="/publications/ijcai23-poster.pdf" target="_blank" rel="external">[Poster]</a>
 		
-		<a href="/publications/mmfp3950-video.mp4" target="_blank" rel="external">[Video]</a>
+		<a href="/publications/ijcai23-slides.pdf" target="_blank" rel="external">[Slides]</a>
 	</p>
     </div>
 </div>
@@ -513,7 +513,7 @@ facial expression recognition, animal facial landmark localization, animal pose 
     <div class="content">
         <p class="title">Towards Discriminative Representations with Contrastive Instances for Real-Time UAV Tracking.</p>
         <p class="authors">Dan Zeng, Mingliang Zou, Xucheng Wang and Shuiwang Li.</p>
-        <p class="publisher">ICME 2023-07 (Brisbane, Australia)<a href="" target="_blank" rel="external">[PDF]</a></p>
+        <p class="publisher">ICME 2023-07 (Brisbane, Australia)<a href="/publications/2023ICME.pdf" target="_blank" rel="external">[PDF]</a></p>
     </div>
 </div>
 <div class="project publication_item">
