--- a/about/index.html
+++ b/about/index.html
@@ -786,7 +786,7 @@ Keynote speech chair for <a href="https://www.comp.hkbu.edu.hk/wsb2021/programme
 	      
 <div class="honor_table">
 Reviewer for major journals and conferences in the areas of Biometrics, computer vision and pattern recognition, 
-such as IEEE TPAMI, IEEE TIFS, IEEE TIP, IEEE TMI, PR, PR Letters, Artificial Intelligence, Electronics Letters, IVC, AAAI'21,AAAI'22, CVPR'22,CVPR'23, ICCV'23, ECCV'22, ACM MM'22, FG'22 etc.
+such as IEEE TPAMI, IJCV, IEEE TIFS, IEEE TIP, IEEE TMI, PR, PR Letters, Artificial Intelligence, Electronics Letters, IVC, AAAI'21,22,23,24, CVPR'22,23, ICCV'23, ECCV'22, ACM MM'22, FG'22,23,24, IJCB'23 etc.
 </div>
 
 
@@ -796,8 +796,8 @@ such as IEEE TPAMI, IEEE TIFS, IEEE TIP, IEEE TMI, PR, PR Letters, Artificial In
 <div class="honor_table">
     <table>
         <tr class="table_item">
-            <td class="table_date">2016</td>
-            <td class="table_desc">National Scholarship, Ministry of Education of China</td>
+            <td class="table_date">2015-2016</td>
+            <td class="table_desc">\textbf{National Scholarship}, Ministry of Education of China</td>
         </tr>
         <tr class="table_item">
             <td class="table_date">2014-2018</td>
@@ -818,6 +818,10 @@ such as IEEE TPAMI, IEEE TIFS, IEEE TIP, IEEE TMI, PR, PR Letters, Artificial In
         <tr class="table_item">
             <td class="table_date">2014-2015</td>
             <td class="table_desc">Outstanding graduate student cadres of Sichuan University</td>
+        </tr>
+	<tr class="table_item">
+            <td class="table_date">2011-2012</td>
+            <td class="table_desc">\textbf{National Scholarship for Encouragement}, Ministry of Education of China</td>
         </tr>
     </table>
 </div>
