--- a/about/index.html
+++ b/about/index.html
@@ -797,7 +797,7 @@ such as IEEE TPAMI, IJCV, IEEE TIFS, IEEE TIP, IEEE TMI, PR, PR Letters, Artific
     <table>
         <tr class="table_item">
             <td class="table_date">2015-2016</td>
-            <td class="table_desc">\textbf{National Scholarship}, Ministry of Education of China</td>
+            <td class="table_desc">National Scholarship, Ministry of Education of China</td>
         </tr>
         <tr class="table_item">
             <td class="table_date">2014-2018</td>
@@ -821,7 +821,7 @@ such as IEEE TPAMI, IJCV, IEEE TIFS, IEEE TIP, IEEE TMI, PR, PR Letters, Artific
         </tr>
 	<tr class="table_item">
             <td class="table_date">2011-2012</td>
-            <td class="table_desc">\textbf{National Scholarship for Encouragement}, Ministry of Education of China</td>
+            <td class="table_desc">National Scholarship for Encouragement, Ministry of Education of China</td>
         </tr>
     </table>
 </div>
