--- a/about/index.html
+++ b/about/index.html
@@ -486,7 +486,7 @@ facial expression recognition, animal facial landmark localization, animal pose 
     <div class="content">
         <p class="title">Rethinking Dual-Stream Super-Resolution Semantic Learning in Medical Image Segmentation.</p>
         <p class="authors">Zhongxi Qiu, Yan Hu, Xiaoshan Chen, Dan Zeng, Qingyong Hu and Jiang Liu.</p>
-        <p class="publisher">IEEE Transactions on Pattern Analysis and Machine Intelligence (IEEE TPAMI), 10.1109/TPAMI.2023.3322735, 2023-10.<a href="/publications/2023TPAMI.pdf" target="_blank" rel="external">[PDF]</a>
+        <p class="publisher">IEEE Transactions on Pattern Analysis and Machine Intelligence (IEEE TPAMI), 10.1109/TPAMI.2023.3322735, 2023-10.<a href="/publications/2023TPAMI_compressed.pdf" target="_blank" rel="external">[PDF]</a>
 	</p>
     </div>
 </div>
