--- a/about/index.html
+++ b/about/index.html
@@ -390,7 +390,7 @@ facial expression recognition, animal facial landmark localization, animal pose 
 </div>
 
 <tr class="table_item_2">
- <td class="table_title"><b>I am seeking highly motivated students, RAs, and interns to be part of our team. If you're interested, I encourage you to reach out to me via email to tell me more about yourself and why you are interested in working with me.</b></td>
+ <td class="table_title"><b>I am seeking highly motivated students, RAs, and interns to be part of our team. If you're interested, you are welcome to drop me an email.</b></td>
 </tr>
 	      
 <hr>
