--- a/about/index.html
+++ b/about/index.html
@@ -501,7 +501,7 @@ facial expression recognition, animal facial landmark localization, animal pose 
     <div class="teasure"></div>
     <div class="content">
         <p class="title">Enhancing UAV Tracking: A Focus on Discriminative Representations using Contrastive Instances.</p>
-        <p class="authors">Xucheng Wang(*), Dan Zeng(*), Yongxin Li, Mingliang Zou, Qijun Zhao and Shuiwang Li. *Equally contributed</p>
+        <p class="authors">Xucheng Wang, Dan Zeng, Yongxin Li, Mingliang Zou, Qijun Zhao and Shuiwang Li.</p>
         <p class="publisher">Journal of Real-Time Image Processing, 2024-03.<a href="" target="_blank" rel="external">[PDF]</a>
 	</p>
     </div>
