--- a/about/index.html
+++ b/about/index.html
@@ -393,7 +393,7 @@ facial expression recognition, animal facial landmark localization, animal pose 
 	      
 <hr>
 <tr class="table_item_2">
- <td class="table_title"><b><i>I am seeking highly motivated students, RAs, and interns to be part of our team. If you're interested, you are welcome to drop me an email :).</i></b></td>
+ <td class="table_title"><b><i>I am seeking highly motivated students, RAs, and interns to be part of our team. If you're interested, you are welcome to drop me an email :)</i></b></td>
 </tr>
 	      
 <hr>
