--- a/about/index.html
+++ b/about/index.html
@@ -505,7 +505,7 @@ facial expression recognition, animal facial landmark localization, animal pose 
     <div class="content">
         <p class="title">Towards Labeling-free Fine-grained Animal Pose Estimation.</p>
         <p class="authors">Dan Zeng, Yu Zhu, Shuiwang Li, Qijun Zhao, Qiaomu Shen, Bo Tang.</p>
-        <p class="publisher">ACM MM 2014-10. (Melbourne, Australia)<a href="" target="_blank" rel="external">[PDF]</a>
+        <p class="publisher">ACM MM 2024-10. (Melbourne, Australia)<a href="" target="_blank" rel="external">[PDF]</a>
 	</p>
     </div>
 </div>
@@ -514,7 +514,7 @@ facial expression recognition, animal facial landmark localization, animal pose 
     <div class="content">
         <p class="title">GenUDC: High Quality 3D Mesh Generation With Unsigned Dual Contouring Representation.</p>
         <p class="authors">Ruowei Wang, Jiaqi Li, Dan Zeng, Xueqi Ma, Xu Zixiang, Jianwei Zhang, Qijun Zhao.</p>
-        <p class="publisher">ACM MM 2014-10. (Melbourne, Australia)<a href="" target="_blank" rel="external">[PDF]</a>
+        <p class="publisher">ACM MM 2024-10. (Melbourne, Australia)<a href="" target="_blank" rel="external">[PDF]</a>
 	</p>
     </div>
 </div>
@@ -523,7 +523,7 @@ facial expression recognition, animal facial landmark localization, animal pose 
     <div class="content">
         <p class="title">Learning Target-Aware Vision Transformer for Real-Time UAV Tracking.</p>
         <p class="authors">Shuiwang Li, Xiangyang Yang, Xucheng Wang, Dan Zeng(#), Hengzhou Ye and Qijun Zhao(#).</p>
-        <p class="publisher">IEEE Transactions on Geoscience and Remote Sensing, 2024-06.<a href="" target="_blank" rel="external">[PDF]</a>
+        <p class="publisher">IEEE Transactions on Geoscience and Remote Sensing, 2024-06.<a href="https://ieeexplore.ieee.org/abstract/document/10568178" target="_blank" rel="external">[PDF]</a>
 	</p>
     </div>
 </div>
