--- a/about/index.html
+++ b/about/index.html
@@ -402,6 +402,12 @@ facial expression recognition, animal facial landmark localization, animal pose 
     <table>
         <tr class="table_item">
             <td class="table_date">2024 July</td>
+            <td class="table_desc">One paper have been accepted by IET Image Processing! This work started three years ago and received many (exact 9 times) rejections due to mixed reviews and bad luck. But I personally like it very much. </td>
+        </tr>
+    </table>
+    <table>
+        <tr class="table_item">
+            <td class="table_date">2024 July</td>
             <td class="table_desc">Two papers have been accepted by ACM MM2024! congrats to Yu Zhu and Ruowei Wang!</td>
         </tr>
     </table>
@@ -515,6 +521,15 @@ facial expression recognition, animal facial landmark localization, animal pose 
         <p class="title">GenUDC: High Quality 3D Mesh Generation With Unsigned Dual Contouring Representation.</p>
         <p class="authors">Ruowei Wang, Jiaqi Li, Dan Zeng, Xueqi Ma, Xu Zixiang, Jianwei Zhang, Qijun Zhao.</p>
         <p class="publisher">ACM MM 2024-10. (Melbourne, Australia)<a href="" target="_blank" rel="external">[PDF]</a>
+	</p>
+    </div>
+</div>
+<div class="project publication_item">
+    <div class="teasure"></div>
+    <div class="content">
+        <p class="title">Face Super Resolution with a High Frequency Highway.</p>
+        <p class="authors">Dan Zeng#(*), Wen Jiang(*), Xiao Yan, Weibo Fu, Qiaomu Shen, Raymond Veldhuis, Bo Tang.</p>
+        <p class="publisher">IET Image Processing 2024-07. (# Corresponding author, * Equally contributed. )<a href="" target="_blank" rel="external">[PDF]</a>
 	</p>
     </div>
 </div>
