--- a/about/index.html
+++ b/about/index.html
@@ -360,7 +360,7 @@
     <div class="bio-text">
         <p style="font-size: 23px"><strong>Dan Zeng 曾丹, PhD.</strong></p>
 		<p>
-            Research Assistant Professor, Associate Researcher, Postgraduate Supervisor (硕导)
+            Research Associate Professor, Associate Researcher, Postgraduate Supervisor (硕导)
         </p>
 		<p>
 			Department of Computer Science and Engineering, <a href="https://www.sustech.edu.cn/">Southern University of Science and Technology</a> (SUSTech).
